# thanos

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: test.yml
docs/: index.md  installation.md  usage.md
src/thanos/: __init__.py  cli.py
src/thanos_cli/: cli.py  config.py  snap.py  weights.py
tests/: __init__.py  test_thanos.py
