[project]
name = "thanos-cli"
version = "0.2.0"
description = "🫰 Thanos - Eliminate half of all files with a snap. Perfectly balanced, as all things should be."
readme = "README.md"
authors = [
    { name = "Soldatov Serhii", email = "soldatov.own@gmail.com" }
]
maintainers = [
    { name = "Soldatov Serhii", email = "soldatov.own@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Typing :: Typed",
]
license = { text = "MIT" }
dependencies = [
    "pathspec>=0.12.1",
    "typer",
]
requires-python = ">= 3.9"
keywords = ["cli", "files", "cleanup", "utility", "thanos"]

[project.optional-dependencies]
test = [
    "pre-commit>=4.3.0",
    "coverage",
    "pytest",
    "ruff",
    "ty",
    "ipdb",
]

[project.urls]
homepage = "https://github.com/soldatov-ss/thanos"
bugs = "https://github.com/soldatov-ss/thanos/issues"
changelog = "https://github.com/soldatov-ss/thanos/blob/master/CHANGELOG.md"
documentation = "https://github.com/soldatov-ss/thanos/blob/master/docs/usage.md"

[project.scripts]
thanos = "thanos_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Important: Tell Hatch where the package lives
[tool.hatch.build.targets.wheel]
packages = ["src/thanos_cli"]

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
]

[tool.coverage.run]
source = ["thanos_cli"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.uv]
package = true
